[B]Version 1.1.94[/B]
- porndig videoplayer fix